Endpoints for tribecast integration
